--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vapor-editor",
+  "name": "ethereal-editor",
   "version": "1.0.0",
   "description": "Ethereum blockchain editor",
   "main": "main.js",
@@ -10,6 +10,7 @@
   },
   "keywords": [
     "Ethereum",
+    "Ethereal",
     "Editor",
     "IDE",
     "Dev",
