--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "ethereal-editor",
   "version": "1.0.0",
   "description": "Ethereum blockchain editor",
-  "main": "main.js",
+  "main": "main.ts",
   "scripts": {
-    "start": "electron .",
-    "test": "test",
-    "lint": "eslint **/*.js"
+    "build": "webpack --config webpack.config.js",
+    "package-all": "electron-packager src Ethereal --all",
+    "package-windows": "electron-packager . Ethereal --overwrite --asar --platform=win32 --arch=x64 --prune=true --out=release-builds",
+    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --prune=true --out=release-builds",
+    "package-linux": "electron-packager . Ethereal --overwrite --asar --platform=linux --arch=x64 --prune=true --out=release-builds",
+    "start": "npm run build && electron ./dist/main.js"
   },
   "keywords": [
     "Ethereum",
@@ -19,26 +22,18 @@
   "author": "Shawn Choleva",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-react-optimize": "^1.0.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^0.28.7",
+    "@types/electron": "^1.6.10",
+    "@types/node": "^8.5.1",
     "electron": "^1.7.9",
-    "eslint": "^4.13.1",
-    "express": "^4.16.2",
-    "file-loader": "^1.1.5",
-    "style-loader": "^0.19.1",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.10.0",
-    "webpack-dev-middleware": "^2.0.1",
-    "webpack-hot-middleware": "^2.21.0"
+    "electron-packager": "^10.1.0",
+    "html-webpack-plugin": "^2.30.1",
+    "ts-loader": "^3.2.0",
+    "typescript": "^2.6.2",
+    "webpack": "^3.10.0"
   },
   "dependencies": {
+    "@types/react": "^16.0.31",
+    "@types/react-dom": "^16.0.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   }
