--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "main.ts",
   "scripts": {
     "build": "webpack --config webpack.config.js",
+    "watch": "webpack",
     "package-all": "electron-packager src Ethereal --all",
     "package-windows": "electron-packager . Ethereal --overwrite --asar --platform=win32 --arch=x64 --prune=true --out=release-builds",
     "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --prune=true --out=release-builds",
     "package-linux": "electron-packager . Ethereal --overwrite --asar --platform=linux --arch=x64 --prune=true --out=release-builds",
-    "start": "npm run build && electron ./dist/main.js"
+    "start": "electron ./dist/main.js"
   },
   "keywords": [
     "Ethereum",
