--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Ethereum blockchain editor",
   "main": "main.ts",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
-    "watch": "webpack",
-    "package-all": "electron-packager src Ethereal --all",
+    "build-watch": "webpack --config webpack.config.js",
+    "start": "electron ./dist/main.js",
+    "build-watch-test": "webpack --config webpack.tests.config.js",
+    "test": "jest",
     "package-windows": "electron-packager . Ethereal --overwrite --asar --platform=win32 --arch=x64 --prune=true --out=release-builds",
     "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --prune=true --out=release-builds",
-    "package-linux": "electron-packager . Ethereal --overwrite --asar --platform=linux --arch=x64 --prune=true --out=release-builds",
-    "start": "electron ./dist/main.js"
+    "package-linux": "electron-packager . Ethereal --overwrite --asar --platform=linux --arch=x64 --prune=true --out=release-builds"
   },
   "keywords": [
     "Ethereum",
@@ -24,10 +24,13 @@
   "license": "MIT",
   "devDependencies": {
     "@types/electron": "^1.6.10",
+    "@types/jest": "^21.1.8",
     "@types/node": "^8.5.1",
     "electron": "^1.7.9",
     "electron-packager": "^10.1.0",
     "html-webpack-plugin": "^2.30.1",
+    "jest": "^21.2.1",
+    "jest-junit": "^3.4.0",
     "ts-loader": "^3.2.0",
     "typescript": "^2.6.2",
     "webpack": "^3.10.0"
@@ -37,5 +40,16 @@
     "@types/react-dom": "^16.0.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
+  },
+  "jest": {
+    "testRegex": "/__tests__/.*\\.jsx?",
+    "testResultsProcessor": "./node_modules/jest-junit"
+  },
+  "jest-junit": {
+    "suiteName": "jest tests",
+    "output": "./TEST-jest_junit.xml",
+    "classNameTemplate": "{classname}-{title}",
+    "titleTemplate": "{classname}-{title}",
+    "usePathForSuiteName": "true"
   }
 }
