Added fs package and started building functionality to create a tree of the folder structure to be used by the file explorer

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "@types/react": "^16.0.31",
     "@types/react-dom": "^16.0.3",
+    "fs": "0.0.1-security",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
