Added Redux for PubSub architecture, immutability and other benefits, and changed/refactored linting

--- a/package.json
+++ b/package.json
@@ -36,15 +36,19 @@
     "jest": "^21.2.1",
     "jest-junit": "^3.4.0",
     "ts-loader": "^3.2.0",
+    "tslint": "^5.8.0",
     "typescript": "^2.6.2",
     "webpack": "^3.10.0"
   },
   "dependencies": {
     "@types/react": "^16.0.31",
     "@types/react-dom": "^16.0.3",
+    "@types/react-redux": "^5.0.14",
     "fs": "0.0.1-security",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   },
   "jest": {
     "testRegex": "/__tests__/.*\\.jsx?",
