--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "@types/electron": "^1.6.10",
     "@types/jest": "^21.1.8",
     "@types/node": "^8.5.1",
+    "css-loader": "^0.28.7",
     "electron": "^1.7.9",
     "electron-packager": "^10.1.0",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.2.1",
     "jest-junit": "^3.4.0",
+    "less-loader": "^4.0.5",
+    "style-loader": "^0.19.1",
     "ts-loader": "^3.2.0",
     "tslint": "^5.8.0",
     "typescript": "^2.6.2",
@@ -45,6 +48,7 @@
     "@types/react-dom": "^16.0.3",
     "@types/react-redux": "^5.0.14",
     "fs": "0.0.1-security",
+    "less": "^2.7.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
