--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
   "author": "Shawn Choleva",
   "license": "MIT",
   "devDependencies": {
-    "@types/electron": "^1.6.10",
     "@types/jest": "^21.1.8",
     "@types/node": "^8.5.1",
     "css-loader": "^0.28.7",
     "electron": "^1.7.9",
     "electron-packager": "^10.1.0",
+    "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.2.1",
     "jest-junit": "^3.4.0",
@@ -40,17 +40,22 @@
     "style-loader": "^0.19.1",
     "ts-loader": "^3.2.0",
     "tslint": "^5.8.0",
+    "tslint-config-standard": "^7.0.0",
+    "tslint-loader": "^3.5.3",
     "typescript": "^2.6.2",
+    "url-loader": "^0.6.2",
     "webpack": "^3.10.0"
   },
   "dependencies": {
     "@types/react": "^16.0.31",
     "@types/react-dom": "^16.0.3",
+    "@types/react-fa": "^4.1.3",
     "@types/react-redux": "^5.0.14",
     "fs": "0.0.1-security",
     "less": "^2.7.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-fa": "^5.0.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2"
   },
