--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "react-dom": "^16.2.0",
     "react-fa": "^5.0.0",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "redux": "^4.0.0-beta.1"
   },
   "jest": {
     "testRegex": "/__tests__/.*\\.jsx?",
