--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,10 @@
         "sourceMap": true,
         "skipLibCheck": true,
         "allowJs": true,
-        "jsx": "react"
+        "jsx": "react",
+        "lib": [
+            "dom",
+            "es7"
+        ]
     }
 }
