--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Ethereum blockchain editor",
   "main": "main.ts",
   "scripts": {
-    "build-watch": "webpack --config webpack.config.js",
+    "build:dev": "webpack --config webpack.config.js",
     "start": "electron ./dist/main.js",
-    "build-watch-test": "webpack --config webpack.tests.config.js",
+    "build:test": "webpack --config webpack.tests.config.js",
     "test": "jest",
     "package-windows": "electron-packager . Ethereal --overwrite --asar --platform=win32 --arch=x64 --prune=true --out=release-builds",
     "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --prune=true --out=release-builds",
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@types/jest": "^21.1.8",
     "@types/node": "^8.5.1",
+    "copy-webpack-plugin": "^4.3.1",
     "css-loader": "^0.28.7",
     "electron": "^1.7.9",
     "electron-packager": "^10.1.0",
@@ -53,9 +54,11 @@
     "@types/react-redux": "^5.0.14",
     "fs": "0.0.1-security",
     "less": "^2.7.3",
+    "monaco-editor": "^0.10.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-fa": "^5.0.0",
+    "react-monaco-editor": "^0.13.0",
     "react-redux": "^5.0.6",
     "redux": "^4.0.0-beta.1"
   },
